--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@astrojs/react": "^3.6.2",
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/tailwind": "^5.1.0",
+    "@tabler/icons-react": "^3.29.0",
     "@tailwindcss/typography": "^0.5.15",
     "@types/github-slugger": "^1.3.0",
     "@types/lodash.kebabcase": "^4.1.9",
@@ -44,5 +45,6 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "typescript-eslint": "^8.5.0"
-  }
+  },
+  "packageManager": "pnpm@10.5.2+sha512.da9dc28cd3ff40d0592188235ab25d3202add8a207afbedc682220e4a0029ffbff4562102b9e6e46b4e3f9e8bd53e6d05de48544b0c57d4b0179e22c76d1199b"
 }
