chore: publish docs as workflow

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "preview": "astro preview",
     "sync": "astro sync",
     "astro": "astro",
-    "format:check": "prettier --check . --plugin=prettier-plugin-astro",
-    "format": "prettier --write . --plugin=prettier-plugin-astro",
-    "lint": "eslint ."
+    "format": "prettier --check . --plugin=prettier-plugin-astro",
+    "format:fix": "prettier --write . --plugin=prettier-plugin-astro",
+    "lint": "eslint src"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
