--- a/.github/workflows/lint-and-build.yml
+++ b/.github/workflows/lint-and-build.yml
@@ -2,10 +2,8 @@ name: Lint and Build
 
 on:
   pull_request:
-    types: [opened, synchronize, reopened]
-  push:
     branches:
-      - '**'
+      - main
 
 jobs:
   lint-and-build:
